--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "yup": "^1.6.1",
-    "zustand": "^5.0.7"
+    "zustand": "^5.0.7",
+    "expo-print": "~14.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
