--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "react-native-webview": "13.13.5",
     "yup": "^1.6.1",
     "zustand": "^5.0.7",
-    "expo-print": "~14.1.4"
+    "expo-print": "~14.1.4",
+    "expo-dev-client": "~5.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
