--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "yup": "^1.6.1",
     "zustand": "^5.0.7",
     "expo-print": "~14.1.4",
-    "expo-dev-client": "~5.2.4"
+    "expo-dev-client": "~5.2.4",
+    "expo-updates": "~0.28.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
