--- a/package.json
+++ b/package.json
@@ -22,16 +22,19 @@
     "expo": "~53.0.20",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
+    "expo-dev-client": "~5.2.4",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
     "expo-linking": "~7.1.7",
+    "expo-print": "~14.1.4",
     "expo-router": "~5.1.4",
     "expo-sharing": "~13.1.5",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.10",
+    "expo-updates": "~0.28.17",
     "expo-web-browser": "~14.2.0",
     "formik": "^2.4.6",
     "graphql": "^16.11.0",
@@ -47,6 +50,7 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-html-to-pdf": "^0.12.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
@@ -54,10 +58,7 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "yup": "^1.6.1",
-    "zustand": "^5.0.7",
-    "expo-print": "~14.1.4",
-    "expo-dev-client": "~5.2.4",
-    "expo-updates": "~0.28.17"
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
