all headers fix to one unique header

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "E-conneque",
+    "name": "Econneq",
     "slug": "mobile",
     "version": "1.0.0",
     "orientation": "portrait",
