--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
     "expo-dev-client": "~5.2.4",
+    "expo-document-picker": "~13.1.6",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
@@ -58,8 +59,7 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "yup": "^1.6.1",
-    "zustand": "^5.0.7",
-    "expo-document-picker": "~13.1.6"
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
