--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "expo-web-browser": "~14.2.0",
     "formik": "^2.4.6",
     "graphql": "^16.11.0",
+    "i18next": "^25.5.2",
     "install": "^0.13.0",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
@@ -47,6 +48,7 @@
     "pod-install": "^0.3.10",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-i18next": "^15.7.3",
     "react-native": "0.79.5",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.24.0",
