--- a/eas.json
+++ b/eas.json
@@ -16,8 +16,16 @@
       "android": {
         "buildType": "apk"
       }
+    },
+    "production": {
+      "distribution": "store",
+      "android": {
+        "buildType": "app-bundle"
+      },
+      "ios": {
+        "simulator": false
+      }
     }
-    
   },
   "submit": {
     "production": {}
