--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "The Brains University",
+    "name": "YIMGA HIGHER INSTITUTE",
     "slug": "mobile",
-    "version": "1.0.8",
+    "version": "1.1.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "mobile",
@@ -10,7 +10,7 @@
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.econneque.mobile"
+      "bundleIdentifier": "com.apiyimga.mobile"
     },
     "android": {
       "adaptiveIcon": {
@@ -18,8 +18,8 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.econneque.mobile",
-      "versionCode": 8
+      "package": "com.apiyimga.mobile",
+      "versionCode": 10
     },
     "web": {
       "bundler": "metro",
