lecturer complaint in progress

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "YIMGA HIGHER INSTITUTE",
+    "name": "The Brains University",
     "slug": "mobile",
     "version": "1.1.0",
     "orientation": "portrait",
@@ -10,7 +10,7 @@
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.apiyimga.mobile"
+      "bundleIdentifier": "com.econneque.mobile"
     },
     "android": {
       "adaptiveIcon": {
@@ -18,7 +18,7 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.apiyimga.mobile",
+      "package": "com.econneque.mobile",
       "versionCode": 10
     },
     "web": {
