pwa app integration

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "The Brains University",
+    "name": "Econneque Mobile",
     "slug": "mobile",
     "version": "1.1.0",
     "orientation": "portrait",
