--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "The Brains University",
+    "name": "Econneq",
     "slug": "mobile",
     "version": "1.1.1",
     "orientation": "portrait",
@@ -45,7 +45,7 @@
     "extra": {
       "router": {},
       "eas": {
-        "projectId": "1faf55cf-eceb-4053-92fc-229c733c2b01"
+        "projectId": "3225754e-c71b-4610-8c67-95aaeb992a4d"
       }
     },
     "runtimeVersion": {
@@ -53,6 +53,7 @@
     },
     "updates": {
       "url": "https://u.expo.dev/1faf55cf-eceb-4053-92fc-229c733c2b01"
-    }
+    },
+    "owner": "givence1"
   }
 }
