--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
+    "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
     "expo-print": "~14.1.4",
     "expo-router": "~5.1.4",
@@ -59,11 +60,11 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-sqlite-storage": "^6.0.1",
+    "react-native-toast-message": "^2.3.3",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
     "yup": "^1.6.1",
-    "zustand": "^5.0.7",
-    "expo-linear-gradient": "~14.1.5"
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
